--- a/css/scraping.css
+++ b/css/scraping.css
@@ -1,22 +1,67 @@
+:root {
+    --main-font: consolas, ubuntu mono, univers, monospace;
+    --main-border-radius: 10px;
+    --main-color: #97CE68;
+    --main-shadow: 4px 4px 2px 2px rgba(204,204,204,0.3);
+    --main-background: repeating-radial-gradient(#4d4d4d, #333333);
+}
+* {
+    font-family: var(--main-font);
+}
+body {
+    margin: 10px 10px 10px 10px;
+    background: var(--main-background);
+}
+
+/*SECTION*/
+.box {
+    margin: 18px 8px 18px 10px;
+    padding: 20px;
+    background: white;
+    border-radius: var(--main-border-radius);
+    box-shadow: var(--main-shadow);
+    min-width: 400px;
+}
+h2,.div_icon {
+    text-align: center;
+}
+.div_icon i {
+    font-size: 80px;
+}
+.g .div_icon i {
+    color: var(--main-color);
+}
+
+/*CONTENT*/
+a {
+    text-decoration: none;
+}
+a:visited{
+    color:blue;
+}
+.box a:hover {
+    background: white;
+}
+
 /*INPUT-OUTPUT*/
 #label  {
-	text-align: center;
-	margin-bottom: 5px;
+    text-align: center;
+    margin-bottom: 5px;
 }
 #radios {
-	margin: auto;
+    margin: auto;
 }
 #radios td {
-	padding-right: 10px;
+    padding-right: 10px;
 }
 #output {
     display: flex;
     flex-flow: column;
-	margin-top: 20px;
-	padding: 5px;
-	min-height: 400px;
-	border-radius: var(--main-border-radius);
-	border-width: 2px;
+    margin-top: 20px;
+    padding: 5px;
+    min-height: 400px;
+    border-radius: var(--main-border-radius);
+    border-width: 2px;
     border-style: inset;
     border-color: initial;
     border-image: initial;
@@ -26,9 +71,9 @@
     justify-content: center;  
 }
 .fa-spinner:before {
-	font-size: 48px;
-	color: var(--main-color-2);
-	margin: 10px 0px 10px 0px;
+    font-size: 48px;
+    color: var(--main-color);
+    margin: 10px 0px 10px 0px;
 }
 
 /*PHP*/
@@ -40,10 +85,30 @@
     flex:1;
 }
 .headline {
-	margin: 0px;
-	text-align: justify;
-	font-weight: normal;
+    margin: 0px;
+    text-align: justify;
+    font-weight: normal;
 }
 .fa-external-link, .r_link, .r_link:visited {
-	color: #006621
+    color: #006621
+}
+
+/*WINDOW RESIZE*/
+/*if viewport 500px or less*/
+@media screen and (max-width: 500px) {
+    body {
+        margin: 10px;
+    }
+    #nav ul {
+        margin-right: 10px;
+    }
+}
+/*if viewport 1200px or wider*/
+@media screen and (min-width: 1200px) {
+    body {
+        margin: 10px 240px 10px 240px;
+    }
+    #nav ul {
+        margin-right: 250px;
+    }
 }
